fixed p tag on mobile for platypus

--- a/css/Components/typography.css
+++ b/css/Components/typography.css
@@ -60,6 +60,20 @@ p {
 	line-height: 26px;
 	letter-spacing: 0.65px;
 }
+
+.plat-intro-p {
+	margin-top: -10px;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 26px;
+	letter-spacing: 0.65px;
+}
+@media (max-width: 768px) {
+	.plat-intro-p {
+	margin-top: 10px;
+	}
+
+
 .headlines {
 	font-size: 28px;
 	font-weight: 600;
